// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FormSelect does not render the inlineHint div if inline is also true 1`] = `
<div class="dfe-flex dfe-align-items--center">
  <label class="govuk-label govuk-!-margin-right-2"
         for="test-select"
  >
    Test select
  </label>
  <select aria-describedby="test-select-hint"
          class="govuk-select"
          id="test-select"
          name="testSelect"
  >
    <option value="option-1">
      Option 1
    </option>
    <option value="option-2">
      Option 2
    </option>
    <option value="option-3">
      Option 3
    </option>
  </select>
</div>
<div id="test-select-hint"
     class="govuk-hint"
>
  Test hint
</div>
`;

exports[`FormSelect renders correctly with inline prop 1`] = `
<div class="dfe-flex dfe-align-items--center">
  <label class="govuk-label govuk-!-margin-right-2"
         for="test-select"
  >
    Test select
  </label>
  <select aria-describedby="test-select-hint"
          class="govuk-select"
          id="test-select"
          name="testSelect"
  >
    <option value="option-1">
      Option 1
    </option>
    <option value="option-2">
      Option 2
    </option>
    <option value="option-3">
      Option 3
    </option>
  </select>
</div>
<div id="test-select-hint"
     class="govuk-hint"
>
  Test hint
</div>
`;

exports[`FormSelect renders correctly with inlineHint prop 1`] = `
<div class="dfe-flex dfe-justify-content--space-between">
  <label class="govuk-label"
         for="test-select"
  >
    Test select
  </label>
  <div id="test-select-hint"
       class="govuk-hint"
  >
    Test hint
  </div>
</div>
<select aria-describedby="test-select-hint"
        class="govuk-select"
        id="test-select"
        name="testSelect"
>
  <option value="option-1">
    Option 1
  </option>
  <option value="option-2">
    Option 2
  </option>
  <option value="option-3">
    Option 3
  </option>
</select>
`;

exports[`FormSelect renders correctly with required props 1`] = `
<label class="govuk-label"
       for="test-select"
>
  Test select
</label>
<select class="govuk-select"
        id="test-select"
        name="testSelect"
>
  <option value="option-1">
    Option 1
  </option>
  <option value="option-2">
    Option 2
  </option>
  <option value="option-3">
    Option 3
  </option>
</select>
`;

exports[`FormSelect renders with error message 1`] = `
<label class="govuk-label"
       for="test-select"
>
  Test select
</label>
<span class="govuk-error-message"
      id="test-select-error"
      data-testid="test-select-error"
>
  <span class="govuk-visually-hidden">
    Error:
  </span>
  Something went wrong
</span>
<select aria-describedby="test-select-error"
        class="govuk-select govuk-select--error"
        id="test-select"
        name="testSelect"
>
  <option value="option-1">
    Option 1
  </option>
  <option value="option-2">
    Option 2
  </option>
  <option value="option-3">
    Option 3
  </option>
</select>
`;
